--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ Django==5.0.1
 django-cockroachdb==5.0
 django-crispy-forms==2.1
 django-environ==0.11.2
+djangorestframework==3.14.0
 psycopg2-binary==2.9.9
+python-dotenv==1.0.1
+pytz==2023.3.post1
 sqlparse==0.4.4
 typing_extensions==4.9.0
 whitenoise==6.6.0
-python-dotenv==1.0.1
