--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.7.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
 cockroachdb==0.3.5
 dj-database-url==2.1.0
 Django==5.0.1
@@ -6,9 +8,12 @@ django-cockroachdb==5.0
 django-crispy-forms==2.1
 django-environ==0.11.2
 djangorestframework==3.14.0
+idna==3.6
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 pytz==2023.3.post1
+requests==2.31.0
 sqlparse==0.4.4
 typing_extensions==4.9.0
+urllib3==2.1.0
 whitenoise==6.6.0
